// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Twitter \`triangle="hide"\` 1`] = `
<DocumentFragment>
  <div
    class="rc-twitter rc-twitter--hide-triangle rc-twitter--hide twitter-picker"
    style="width: 276px;"
  >
    <div
      class="rc-twitter__triangle-shadow"
    />
    <div
      class="rc-twitter__triangle"
    />
    <div
      class="rc-twitter__body"
    >
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(255, 105, 0);"
            tabindex="0"
            title="#FF6900"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(252, 185, 0);"
            tabindex="0"
            title="#FCB900"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(123, 220, 181);"
            tabindex="0"
            title="#7BDCB5"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(0, 208, 132);"
            tabindex="0"
            title="#00D084"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(142, 209, 252);"
            tabindex="0"
            title="#8ED1FC"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(6, 147, 227);"
            tabindex="0"
            title="#0693E3"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(171, 184, 195);"
            tabindex="0"
            title="#ABB8C3"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(235, 20, 76);"
            tabindex="0"
            title="#EB144C"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(247, 141, 167);"
            tabindex="0"
            title="#F78DA7"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(153, 0, 239);"
            tabindex="0"
            title="#9900EF"
          />
        </span>
      </div>
      <div
        class="rc-twitter__hash"
      >
        #
      </div>
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-3"
          spellcheck="false"
          value="22194D"
        />
      </div>
      <div
        class="rc-twitter__clear"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Twitter \`triangle="top-right"\` 1`] = `
<DocumentFragment>
  <div
    class="rc-twitter rc-twitter--top-right twitter-picker"
    style="width: 276px;"
  >
    <div
      class="rc-twitter__triangle-shadow"
    />
    <div
      class="rc-twitter__triangle"
    />
    <div
      class="rc-twitter__body"
    >
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(255, 105, 0);"
            tabindex="0"
            title="#FF6900"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(252, 185, 0);"
            tabindex="0"
            title="#FCB900"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(123, 220, 181);"
            tabindex="0"
            title="#7BDCB5"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(0, 208, 132);"
            tabindex="0"
            title="#00D084"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(142, 209, 252);"
            tabindex="0"
            title="#8ED1FC"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(6, 147, 227);"
            tabindex="0"
            title="#0693E3"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(171, 184, 195);"
            tabindex="0"
            title="#ABB8C3"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(235, 20, 76);"
            tabindex="0"
            title="#EB144C"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(247, 141, 167);"
            tabindex="0"
            title="#F78DA7"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(153, 0, 239);"
            tabindex="0"
            title="#9900EF"
          />
        </span>
      </div>
      <div
        class="rc-twitter__hash"
      >
        #
      </div>
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-4"
          spellcheck="false"
          value="22194D"
        />
      </div>
      <div
        class="rc-twitter__clear"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Twitter renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-twitter rc-twitter--top-left twitter-picker"
    style="width: 276px;"
  >
    <div
      class="rc-twitter__triangle-shadow"
    />
    <div
      class="rc-twitter__triangle"
    />
    <div
      class="rc-twitter__body"
    >
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(255, 105, 0);"
            tabindex="0"
            title="#FF6900"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(252, 185, 0);"
            tabindex="0"
            title="#FCB900"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(123, 220, 181);"
            tabindex="0"
            title="#7BDCB5"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(0, 208, 132);"
            tabindex="0"
            title="#00D084"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(142, 209, 252);"
            tabindex="0"
            title="#8ED1FC"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(6, 147, 227);"
            tabindex="0"
            title="#0693E3"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(171, 184, 195);"
            tabindex="0"
            title="#ABB8C3"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(235, 20, 76);"
            tabindex="0"
            title="#EB144C"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(247, 141, 167);"
            tabindex="0"
            title="#F78DA7"
          />
        </span>
      </div>
      <div
        class="rc-twitter__swatch"
      >
        <span>
          <div
            class="rc-swatch"
            style="background: rgb(153, 0, 239);"
            tabindex="0"
            title="#9900EF"
          />
        </span>
      </div>
      <div
        class="rc-twitter__hash"
      >
        #
      </div>
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-1"
          spellcheck="false"
          value="22194D"
        />
      </div>
      <div
        class="rc-twitter__clear"
      />
    </div>
  </div>
</DocumentFragment>
`;
